log
Sun 14 Aug 2022 06:24:46 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘suma’:
exercises.c:15:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   15 |   scanf("%d %d", &a ,&b);
      |   ^~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c0567cd
